New h6 is updated

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <h2>I'm the backend Developer Here</h2>
     <h3>I'm the Frontend Developer</h3>
     <h5>Some is not important</h5>
+    <h6>Everything is Important</h6>
     
 </body>
 
 </html>
+
 
 
